Adicionar guia para rodar aplicação java